[package]
name = "genmeta-ssh"
description = "SSH3 core session, channel, and wire-format foundation"
version = "0.1.0"
edition = "2024"

[dependencies]
h3x = { path = "../h3x", features = ["remoc", "serde"] }
http = "1"
http-body-util = "0.1"
nix = { version = "0.29", features = ["term", "ioctl", "signal", "fs", "process", "user"] }
snafu = "0.9"
tracing = "0.1"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "process", "net"] }
base64 = "0.22"
remoc = { version = "0.18", default-features = false, features = [
    "remoc_macro",
    "rfn",
    "rtc",
    "serde",
    "default-codec-json",
] }
pam-client2 = { version = "0.5", default-features = false, optional = true }
peg = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
futures = "0.3"

[features]
pam = ["dep:pam-client2"]
cli = ["dep:peg"]

[dev-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
serde_json = "1"
tempfile = "3"
tower-service = "0.3"
tracing-subscriber = "0.3"

[[example]]
name = "ssh3-client"
required-features = ["cli"]
