[package]
name = "dssh"
description = "DSSH core session, channel, and wire-format foundation"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/genmeta/dssh"

[dependencies]
h3x = { git = "https://github.com/genmeta/h3x.git", branch = "endpoint", version = "0.3.0", features = [
    "rpc",
    "serde",
    "webtransport",
] }
http = "1"
http-body = "1"
http-body-util = "0.1"
nix = { version = "0.31", features = [
    "term",
    "ioctl",
    "signal",
    "fs",
    "process",
    "user",
], optional = true }
libc = { version = "0.2", optional = true }
snafu = "0.9"
tracing = "0.1"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "process",
    "net",
] }
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"
remoc = { version = "0.18", default-features = false, features = [
    "remoc_macro",
    "rfn",
    "rtc",
    "serde",
    "default-codec-bincode",
] }
pam-client2 = { version = "0.5", default-features = false, optional = true }
peg = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
futures = "0.3"

[features]
client = []
server = ["h3x/ipc", "dep:nix", "dep:libc"]
pam = ["server", "dep:pam-client2"]
cli = ["dep:peg"]
config = ["dep:peg"]

[dev-dependencies]
serde_json = "1"
tempfile = "3"
