[package]
name = "genmeta-ssh3-client"
description = "SSH3 client implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
genmeta-ssh = { path = "../genmeta-ssh" }
h3x = { path = "../../h3x" }
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
base64 = "0.22"
snafu = "0.9"
http = "1"
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
genmeta-ssh3-server = { path = "../genmeta-ssh3-server" }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "ssh3-client"
path = "src/bin/ssh3-client.rs"
