[package]
name = "genmeta-ssh3-proto"
version = "0.3.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
ciborium = { workspace = true }
h3x = { workspace = true }
remoc = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["net", "macros", "time"] }
tracing = { workspace = true }
