[package]
name = "genmeta-ssh3-proto"
description = "SSH3 protocol types and wire format codec"
version = "0.1.0"
edition = "2024"

[dependencies]
h3x = { path = "../../h3x" }
snafu = "0.9"
tracing = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util"] }
base64 = "0.22"
remoc = { version = "0.18", default-features = false, features = ["remoc_macro", "rtc", "serde", "default-codec-json"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"