[package]
name = "genmeta-ssh3-server"
description = "SSH3 server implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
genmeta-ssh3-proto = { path = "../genmeta-ssh3-proto" }
h3x = { path = "../../h3x" }
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util"] }
tracing = "0.1"
futures = "0.3"
remoc = { version = "0.18", default-features = false, features = ["remoc_macro", "rtc", "serde"] }