[package]
name = "genmeta-ssh3-server"
description = "SSH3 server implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
genmeta-ssh3-proto = { path = "../genmeta-ssh3-proto" }
h3x = { path = "../../h3x" }
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util", "time", "process"] }
tracing = "0.1"
futures = "0.3"
remoc = { version = "0.18", default-features = false, features = ["remoc_macro", "rtc", "serde", "default-codec-json"] }
http = "1"
rand = "0.9"
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
nix = { version = "0.29", features = ["term"] }

[dev-dependencies]
gm-quic = { path = "../../gm-quic/gm-quic" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-service = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-appender = "0.2"