[package]
name = "genmeta-ssh3-server"
description = "SSH3 server implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
genmeta-ssh3-proto = { path = "../genmeta-ssh3-proto" }
h3x = { path = "../../h3x" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "time", "process", "net"] }
tracing = "0.1"
futures = "0.3"
snafu = "0.9"
remoc = { version = "0.18", default-features = false, features = ["remoc_macro", "rtc", "serde", "default-codec-json"] }
http = "1"
http-body = "1"
tower-service = "0.3"
http-body-util = "0.1"
bytes = "1"
rand = "0.9"
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
nix = { version = "0.29", features = ["term", "user", "ioctl", "signal", "fs"] }
pam-client2 = { version = "0.5", optional = true }
gm-quic = { path = "../../gm-quic/gm-quic" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tracing-appender = "0.2"

[features]
default = []
pam = ["dep:pam-client2"]

[dev-dependencies]
tokio-util = { version = "0.7", features = ["rt"] }
genmeta-ssh3-client = { path = "../genmeta-ssh3-client" }

[[bin]]
name = "ssh3-server"
path = "src/bin/ssh3-server.rs"
