[package]
name = "ssh-config"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { workspace = true, features = [
    "from",
    "into",
    "as_ref",
    "deref",
    "deref_mut",
] }
dirs = { workspace = true }
either = { workspace = true }
http = { workspace = true, optional = true }
peg = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[features]
default = []
openssh = ["dep:http"]
